gfx/ycbcr/yuv_convert.h
@@ -8,10 +8,6 @@
 #include "chromium_types.h"
 #include "gfxCore.h"
 
-#ifdef HAVE_ARM_NEON
-#define HAVE_YCBCR_TO_RGB565 1
-#endif
- 
 namespace mozilla {
 
 namespace gfx {
@@ -44,21 +40,6 @@ enum ScaleFilter {
   FILTER_BILINEAR_V = 2,  // Bilinear vertical filter.
   FILTER_BILINEAR = 3     // Bilinear filter.
 };
-
-// Convert a frame of YUV to 16 bit RGB565.
-// Pass in YV12 formats
-NS_GFX_(void) ConvertYCbCrToRGB565(const uint8* yplane,
-                                  const uint8* uplane,
-                                  const uint8* vplane,
-                                  uint8* rgbframe,
-                                  int pic_x,
-                                  int pic_y,
-                                  int pic_width,
-                                  int pic_height,
-                                  int ystride,
-                                  int uvstride,
-                                  int rgbstride,
-                                  YUVType yuv_type);
 
 // Convert a frame of YUV to 32 bit ARGB.
 // Pass in YV16/YV12 depending on source format
